# askrypt

./: CLAUDE.md  Cargo.toml  README.md  SPEC.md  TODO.md  askrypt-bash.md  askrypt-bash.sh  build.rs  install-desktop.sh  package-macos.sh  res.rc
.github/workflows/: ci.yml  release.yml
app/: .gitignore  PLAN.md  README.md  analysis_options.yaml  pubspec.yaml
app/android/: settings.gradle.kts
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/askrypt/app/: MainActivity.kt
app/ios/Runner/: AppDelegate.swift  Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: app.dart  main.dart  passgen.dart
app/lib/crypto/: aes.dart  kdf.dart  normalize.dart  secret_entry.dart  translit.dart  vault.dart
app/lib/platform/: biometric_store.dart  platform_security.dart  recent_vault_store.dart  secure_clipboard.dart  vault_io.dart
app/lib/screens/: auto_lock.dart  entries_screen.dart  entry_edit_screen.dart  password_generator_screen.dart  questions_editor_screen.dart  unlock_screen.dart  welcome_screen.dart
app/lib/session/: unlocked_vault.dart  vault_session.dart
app/rust/: Cargo.toml
app/rust/src/: api.rs  lib.rs
app/test/: biometric_test.dart  crypto_parity_test.dart  flutter_test_config.dart  passgen_test.dart  screens_test.dart  secure_clipboard_test.dart  session_test.dart
app/test/fixtures/: vectors.json
app/tool/: make_vault.dart
core/: Cargo.toml
core/examples/: gen_vectors.rs  open_vault.rs
core/src/: lib.rs  passgen.rs  types.rs
scripts/: run-emulator.sh  stop-emulator.sh  update-deps.sh
skills/ai-context-engineer/: SKILL.md
src/: app.rs  core.rs  hash.rs  icon.rs  lib.rs  main.rs  message.rs  session.rs  settings.rs  translit.rs  tray.rs  types.rs  ui.rs  util.rs
src/screens/: entries.rs  entry_editor.rs  mod.rs  passgen.rs  questions.rs  smart_lock.rs  unlock.rs  welcome.rs
static/: Info.plist  askrypt.desktop
web/: askrypt.html
