[package]
name = "askrypt"
description = "Password manager without master password"
authors = [
    "Ruslan Absaliamov <ruslan.absalyamov@gmail.com>",
]
version = "0.4.0-dev"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/askrypt/askrypt"
repository = "https://github.com/askrypt/askrypt"
keywords = ["password-manager", "password", "encryption", "aes", "pbkdf2"]
categories = [
    "cryptography",
    "security",
]

[[bin]]
name = "askrypt"
path = "src/main.rs"

[dependencies]
pbkdf2 = { version = "0.12.2", features = ["simple"] }
sha2 = "0.10.9"
hex = "0.4.3"
rand = "0.9.2"
aes = "0.8.4"
cbc = "0.1.2"
cipher = { version = "0.4.4", features = ["block-padding"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
iced = { version = "0.14.0", features = ["image", "fira-sans", "tokio"] }
rfd = "0.16.0"
chrono = { version = "0.4", features = ["serde"] }
zip = "6.0.0"
open = "5.3.3"
image = "0.25.9"
png = "0.16"
tray-item = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
tray-item = { version = "0.10.0", features = ["ksni"] }

[profile.release]
strip = true  # Automatically strips symbols and debuginfo in release builds

[profile.deb]
inherits = "release"

[package.metadata.deb]
section = "utils"
assets = [
    ["target/release/askrypt", "usr/bin/", "755"],
    ["static/askrypt.desktop", "usr/share/applications/", "644"],
    ["static/logo-128.png", "usr/share/icons/hicolor/128x128/apps/askrypt.png", "644"],
]
extended-description = """\
Askrypt (askrypt) - Password manager without master password.
"""

[build-dependencies]
winresource = "0.1.15"
