[package]
name = "askrypt"
description = "Password manager without master password"
authors = [
    "Ruslan Absaliamov <ruslan.absalyamov@gmail.com>",
]
version = "0.6.0-dev"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/askrypt/askrypt"
repository = "https://github.com/askrypt/askrypt"
keywords = ["password-manager", "password", "encryption", "aes", "pbkdf2"]
categories = [
    "cryptography",
    "security",
]

[workspace]
members = ["core"]

[[bin]]
name = "askrypt"
path = "src/main.rs"

[dependencies]
# Crypto, vault format, transliteration and password generation live in the
# shared core crate (reused by the desktop binary and the future mobile app).
askrypt-core = { path = "core" }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
iced = { version = "0.14.0", features = ["image", "fira-sans", "tokio"] }
rfd = "0.16.0"
chrono = { version = "0.4", features = ["serde"] }
open = "5.3.3"
image = "0.25.9"
png = "0.16"
tray-item = "0.10.0"
zeroize = "1"

[target.'cfg(target_os = "linux")'.dependencies]
tray-item = { version = "0.10.0", features = ["ksni"] }

[profile.release]
strip = true  # Automatically strips symbols and debuginfo in release builds

[profile.deb]
inherits = "release"

[package.metadata.deb]
section = "utils"
assets = [
    ["target/release/askrypt", "usr/bin/", "755"],
    ["static/askrypt.desktop", "usr/share/applications/", "644"],
    ["static/logo-128.png", "usr/share/pixmaps/askrypt.png", "644"],
]
extended-description = """\
Askrypt (askrypt) - Password manager without master password.
"""

[build-dependencies]
winresource = "0.1.15"
