[package]
name = "askrypt-core"
description = "Askrypt core: encryption, key derivation, vault format, transliteration and password generation"
authors = [
    "Ruslan Absaliamov <ruslan.absalyamov@gmail.com>",
]
version = "0.6.0-dev"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/askrypt/askrypt"
repository = "https://github.com/askrypt/askrypt"
keywords = ["password-manager", "password", "encryption", "aes", "pbkdf2"]
categories = [
    "cryptography",
    "security",
]

# Keep the library name `askrypt` so dependents (desktop binary, doctests,
# future mobile bindings) refer to it as `askrypt::...`.
[lib]
name = "askrypt"
path = "src/lib.rs"

[dependencies]
pbkdf2 = { version = "0.12.2", features = ["simple"] }
sha2 = "0.10.9"
rand = "0.9.2"
aes = "0.8.4"
cbc = "0.1.2"
cipher = { version = "0.4.4", features = ["block-padding"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
zip = "6.0.0"

[dev-dependencies]
hex = "0.4.3"
