[package]
name = "askrypt-core"
description = "Askrypt core: encryption, key derivation, vault format, transliteration and password generation"
authors = [
    "Ruslan Absaliamov <ruslan.absalyamov@gmail.com>",
]
version = "0.6.1-dev"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/askrypt/askrypt"
repository = "https://github.com/askrypt/askrypt"
keywords = ["password-manager", "password", "encryption", "aes", "pbkdf2"]
categories = [
    "cryptography",
    "security",
]

# Keep the library name `askrypt` so dependents (desktop binary, doctests,
# future mobile bindings) refer to it as `askrypt::...`.
[lib]
name = "askrypt"
path = "src/lib.rs"

[dependencies]
pbkdf2 = { version = "0.13.0", features = ["hmac"] }
sha2 = "0.11.0"
rand = "0.10.1"
aes = "0.9.1"
cbc = "0.2.1"
cipher = { version = "0.5.2", features = ["block-padding"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
zip = "8.6.0"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4.3"
