[package]
name = "askrypt-mobile"
description = "flutter_rust_bridge bindings exposing askrypt-core to the Flutter mobile app"
authors = [
    "Ruslan Absaliamov <ruslan.absalyamov@gmail.com>",
]
version = "0.6.0-dev"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/askrypt/askrypt"
repository = "https://github.com/askrypt/askrypt"
publish = false

[lib]
# cdylib -> Android (.so via cargo-ndk); staticlib -> iOS (xcframework);
# lib    -> so the crate stays unit-testable with `cargo test`.
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
askrypt-core = { path = "../../core" }
flutter_rust_bridge = "2"
zeroize = "1"

[lints.rust]
# `frb_expand` is set internally by the flutter_rust_bridge `#[frb]` macro;
# declare it so the unexpected_cfgs lint stays useful for real typos.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
